# talk-to-your-data

./: .gitignore  main.py  pyproject.toml
src/: pandas_agent.py
src/.streamlit/: secrets.example.toml
