[project]
name = "talk-to-your-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.27",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "tabulate>=0.9.0",
]
